<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ProfileFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/background"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <!-- TODO: Add attributes to change in the profile -->
        <LinearLayout
            android:id="@+id/profileAttrContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txvCuisineTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_intolerances"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/chb_intolerance0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__dairy"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__egg"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__gluten"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__grain"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__peanut"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__seafood"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__sesame"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__shellfish"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__soy"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__sulfite"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__tree_nut"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_intolerance11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_intolerances__wheat"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/txvDietaryPreferences2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_diets"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/chb_diet11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_diets__gluten_free"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_diet12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_diets__ketogenic"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_diet13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_diets__vegetarian"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_diet14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_diets__lacto_vegetarian"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_diet15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_diets__ovo_vegetarian"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_diet16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_diets__vegan"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_diet17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_diets__pescetarian"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_diet18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_diets__paleo"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_diet19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_diets__primal"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chb_diet20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_diets__whole30"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>