<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ProfileFragment">

    <ImageButton
        android:id="@+id/imbBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/background"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imbBack">

        <!-- TODO: Add attributes to change in the profile -->
        <LinearLayout
            android:id="@+id/profileAttrContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txvCuisineTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cuisines"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/chbCuisine0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__african"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__american"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__british"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__cajun"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__caribbean"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__chinese"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__eastern_european"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__european"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__french"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__german"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__greek"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__indian"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__irish"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__italian"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__japanese"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__jewish"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__korean"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__latin_american"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__mediterranean"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__mexican"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__middle_eastern"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__nordic"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__southern"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__spanish"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__thai"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/chbCuisine25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/profile_cuisines__vietnamese"
                android:textSize="24sp"
                app:buttonTint="@color/colorPrimaryDark" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>