<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/txvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_login"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvLogin" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txvUsername"
        app:layout_constraintTop_toBottomOf="@+id/txvUsername"
        android:hint="@string/login_username"
        android:autofillHints="username" />

    <TextView
        android:id="@+id/txvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_password"
        app:layout_constraintStart_toStartOf="@+id/edtUsername"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtUsername"
        app:layout_constraintStart_toStartOf="@+id/txvPassword"
        app:layout_constraintTop_toBottomOf="@+id/txvPassword"
        android:hint="@string/login_password"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="132dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_register"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="132dp"
        android:layout_height="46dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintTop_toTopOf="@+id/btnRegister" />

    <Button
        android:id="@+id/btnForgottenPassword"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:shadowColor="@android:color/transparent"
        android:text="@string/login_forgottenpassword"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>